[package]
name = "cf-worker-linkshortener"
version = "1.0.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "1.0.0"
# Cloudflare hasn't released official D1 support for Rust yet
worker = { git = "https://github.com/FlareLine/workers-rs.git", branch = "d1-support", features = ["d1"] }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.67"
serde-wasm-bindgen = "0.4"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
